# letters2023

./: .gitignore  CMakeLists.txt  README.md
include/: BufferPacker.h  Color.h  CommandSender.h  LEDCommand.h  LetterCore.h  LightCore.h  LightInterface.h  MatrixState.h  Pattern.h  PixelState.h  Source.h
include/patterns/: AllWhite.h  GradientPattern.h  TPSCheck.h  TPSTest.h  TVStatic.h  TestPattern.h
src/: BufferPacker.cpp  CommandSender.cpp  LetterCore.cpp  LightCore.cpp  LightInterface.cpp  MatrixState.cpp  Pattern.cpp  main.cpp
util/: lightboard.py
